# svgpathtools

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE.txt  LICENSE2.txt  MANIFEST  MANIFEST.in  README.ipynb  README.md  README.rst  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tags
.github/workflows/: codacy-coverage-reporter.yml  codacy.yml  codeql-analysis.yml  coverage.yml  github-ci-legacy.yml  github-ci.yml  main.yml  publish-on-pypi-test.yml  publish-on-pypi.yml
examples/: compute-many-points-quickly-using-numpy-arrays.py  determine-if-svg-path-is-contained-in-other-path-example.py  distance-between-two-svg-paths-example.py  wasm-via-pyodide-example.html
svgpathtools/: __init__.py  arctobezier.py  bezier.py  constants.py  directional_field.py  document.py  misctools.py  parser.py  path.py  path_quadtree.py  paths2svg.py  pathtools.py  polytools.py  smoothing.py  svg2paths.py  svg_io_sax.py  svg_parser.py  svg_to_paths.py  utils.py
svgpathtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
svgpathtools/tests/: test_pathtools.py
test/: test_bezier.py  test_document.py  test_generation.py  test_groups.py  test_offset.py  test_parsing.py  test_path.py  test_path_d.py  test_pathtools.py  test_polytools.py  test_sax_groups.py  test_svg2paths.py  test_svg2paths_groups.py  tests_path_intersect_with_horizontal.py  tests_split_extremum_y.py
