[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svgpathtools"
description = "A collection of tools for manipulating and analyzing SVG Path objects and Bezier curves."
readme = "README.md"
authors = [
    { name = "Andy Port", email = "AndyAPort@gmail.com" }
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["svg", "svg path", "svg.path", "bezier", "parse svg path", "display svg"]
urls = { "Homepage" = "https://github.com/mathandy/svgpathtools" }
dependencies = [
    "numpy",
    "svgwrite",
    "scipy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black~=24.4",
    "flake8~=7.0",
    "pre-commit~=3.7"
]
lint = [
    "black~=24.4",
    "flake8~=7.0"
]

[tool.setuptools.packages.find]
where = ["svgpathtools"]
include = ["svgpathtools*"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {attr = "svgpathtools.__version__"}

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  (?x)
  (^|/)README\.md$
  | \.svg$
  | \.html$
)
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    "README.md",
    "*.svg",
    "*.html",
]
